[package]
name = "bls-cli"
version = "0.1.0"
edition = "2024"
authors = ["Prime-Lasking <limosbestert@gmail.com>"]
description = "A modern, better replacement for ls written in Rust with colored output"
license = "MIT"
repository = "https://github.com/Prime-Lasking/bls"
readme = "README.md"

[[bin]]
name = "bls-cli"
path = "src/main.rs"

[dependencies]
walkdir = "2.5.0"
colored = "2"
